--- a/css/style.css
+++ b/css/style.css
@@ -184,3 +184,30 @@ body {
   75%  {background: #00acc1 ;}
   100% {background: #ff8a80;}
 }
+
+@keyframes blink {
+  0% {
+    opacity: .2;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: .2;
+  }
+}
+
+.ch span {
+  animation-name: blink;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+}
+
+.ch span:nth-child(2) {
+  animation-delay: .2s;
+}
+
+.ch span:nth-child(3) {
+  animation-delay: .4s;
+}
